nav and header done but needs the fixed scroll nav

--- a/_includes/head/styleguide-head.html
+++ b/_includes/head/styleguide-head.html
@@ -8,6 +8,12 @@
 
 <link rel="profile" href="http://gmpg.org/xfn/11" />
 
+<!-- Typekit -->
+
+
+<script src="https://use.typekit.net/ljy5gqr.js"></script>
+<script>try{Typekit.load({ async: true });}catch(e){}</script>
+
 <!-- main stylesheet -->
 <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/style.css" />
 
