--- a/assets/css/_imports.scss
+++ b/assets/css/_imports.scss
@@ -57,11 +57,11 @@
 @import "ui/components/nav/trigger";
 @import "ui/components/nav/mobile-nav";
 @import "ui/components/nav/lap-nav";
-@import "ui/components/giant-link-box";
-@import "ui/components/cta-strip";
-@import "ui/components/typed";
-@import "ui/components/columns";
-@import "ui/components/fancybox";
+//@import "ui/components/giant-link-box";
+//@import "ui/components/cta-strip";
+//@import "ui/components/typed";
+//@import "ui/components/columns";
+//@import "ui/components/fancybox";
 @import "ui/components/flexslider";
 @import "ui/components/flexslider-content";
 
