--- a/_includes/head/header-with-flexslider.html
+++ b/_includes/head/header-with-flexslider.html
@@ -1,16 +1,14 @@
-<header id="top" role="banner" class="clearfix u-pb+">
+<header id="top" role="banner" class="clearfix">
 
     <div class="wrapper">
 
-        <h1 class="site-title-svg u-pt-">
+        <h1 class="site-title-svg u-mb0">
 
           <a class="link-secret" href="/" title="" rel="home">
 
             Zeevo
 
-            <svg>
-              <use xlink:href="img/svg-defs.svg#shape-branding" />
-            </svg>
+            <img src="/img/yunkle-logo-compressor.jpg" />
 
           </a>
 
