--- a/assets/css/ui/base/_headings.scss
+++ b/assets/css/ui/base/_headings.scss
@@ -2,14 +2,14 @@ h1,
 .alpha,
 %alpha {
     @include font-size($heading-size-1);
-    font-weight: $heavy;
+    font-weight: $bold;
 }
 
 h2,
 .beta,
 %beta {
     @include font-size($heading-size-2);
-    font-weight: $heavy;
+    font-weight: $bold;
 
 }
 
@@ -17,7 +17,7 @@ h3,
 .gamma,
 %gamma {
     @include font-size($heading-size-3);
-    font-weight: $book;
+    font-weight: $bold;
 
 }
 
@@ -25,7 +25,7 @@ h4,
 .delta,
 %delta {
     @include font-size($heading-size-4);
-    font-weight: $heavy;
+    font-weight: $bold;
 
 }
 
@@ -33,7 +33,7 @@ h5,
 .epsilon,
 %epsilon {
     @include font-size($heading-size-5);
-    font-weight: $book;
+    font-weight: $bold;
 
 
 }
@@ -42,32 +42,7 @@ h6,
 .zeta,
 %zeta {
     @include font-size($heading-size-6);
-    font-weight: $book;
+    font-weight: $bold;
 
 }
 
-.huge {
-
-    br {display: none;}
-
-    @include font-size(45px, 1.3);
-
-    @include bp(full-nav) {
-        br {display: block;}
-        @include font-size(65px, 1.3);
-    }
-
-    @include bp(desk) {
-        @include font-size(95px, 1.3);
-    }
-
-    a:hover {
-        color: white;
-    }
-
-}
-
-.big {
-    @include font-size(50px, 1.3);
-    font-weight: $black;
-}
