--- a/assets/css/ui/base/_type.scss
+++ b/assets/css/ui/base/_type.scss
@@ -1,5 +1,5 @@
 b, strong {
-	font-weight: $heavy;
+	font-weight: $bold;
 }
 
 .highlight {
@@ -25,38 +25,4 @@ b, strong {
   	white-space: nowrap;
   	overflow: hidden;
   	text-overflow: ellipsis;
-}
-
-.svg-right {
-	position: relative;
-
-	svg {
-		width: 6px;
-	    height: 16px;
-	    fill: transparent;
-	    right: 8px;
-	    stroke-width: 2px;
-	    stroke-linecap: round;
-	    display: inline-block;
-	    vertical-align: text-top;
-	    margin-left: 10px;
-	}
-}
-
-	.svg--white-arrow {
-		fill: transparent;
-		stroke: white;
-	}
-
-
-.box-text {
-	color: white;
-    background-color: $highlight;
-    display: inline-block;
-    padding: 10px;
-	position: absolute;
-	z-index: 999;
-	position:absolute;
-	bottom: $spacing-unit;
-	left: $spacing-unit;
 }
